--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "nucampsite",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "This is a website for the fictional review site NuCamp.",
+  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lite": "lite-server",
+    "start": "npm run lite"
   },
-  "author": "",
+  "author": "Jamey Smith",
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.5.4"
